src/styles/checkout.css
.checkout-content {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  gap: 30px;
  padding: 25px 0;
}

@media screen and (max-width: 768px) {
  .checkout-content {
    display: block;
    padding: 12px 0;
  }
}

.billing {
  grid-column: 1 / 8;
  order: 1;
}

@media screen and (max-width: 1025px) {
  .billing {
    grid-column: 1 / 6;
  }
}

.order-summary {
  grid-column: 8 / 13;  
  order: 2;
  padding: 30px 15px;
  border: 1px solid var(--c-black30);
  border-radius: 12px;
  height: fit-content;
}

@media screen and (max-width: 1025px) {
  .order-summary  {
    grid-column: 7 / 13;
  }
}

@media screen and (max-width: 560px) {
  .order-summary  {
    padding: 20px 30px;
  }
}

.order-summary__warning {
  font-size: 13px;
  color: var(--c-black20);
}

.order-summary__list {
  margin: 0;
  padding: 0;
  list-style: none;
}

.purchase-item {
  display: flex;
  gap: 18px;
  padding: 20px 0;
  border-bottom: 1px solid var(--c-black40);
}

@media screen and (max-width: 480px) {
  .purchase-item {
    display: block;
    padding: 25px 0;
  }  
}

.purchase-item__aside {
  max-width: 30%;
}

@media screen and (max-width: 768px) {
  .purchase-item__aside{
    max-width: 40%;
  }
}

@media screen and (max-width: 560px) {
  .purchase-item__aside{
    max-width: 45%;
  }
}

@media screen and (max-width: 480px) {
  .purchase-item__aside{
    max-width: 100%;
  }
}

.purchase-item__buttons {
  display: block;
}

@media screen and (max-width: 768px) {
  .purchase-item__buttons {
    display: flex;
  }
}

.purchase-item__buttons button {
  display: block;
  padding: 2px;
  font-weight: 400;
  color: var(--c-black20);
}

.purchase-item__buttons button:hover {
  color: var(--c-copper10);
  text-decoration: underline;
}

.purchase-item__buttons button svg {
  width: 13px;
  height: 13px;
  margin-right: 8px;
}

.purchase-item__image {
  height: 67px;
  border-radius: 12px;
}

@media screen and (max-width: 768px) {
  .purchase-item__image {
    height: 125px;
  }
}

@media screen and (max-width: 480px) {
  .purchase-item__image {
    height: 165px;
  }
}

.purchase-item__info {
  flex: 1;
}

.purchase-item__name {
  margin-bottom: 7px;
  font-size: 15px;
  font-weight: 500;
}

@media screen and (max-width: 480px) {
  .purchase-item__name {
    margin-top: 15px;
  }
}

.purchase-item__specs {
  width: 70%;
  margin-bottom: 10px;
  font-size: 14px;
}

@media screen and (max-width: 1025px) {
  .purchase-item__specs {
    width: auto;
  }
}

.purchase-item__specs td:first-of-type {
  width: 50%;
  color: var(--c-black30);
}

.purchase-item__price {
  font-size: 18px;
  font-weight: 600;
  color: var(--c-secondary);
}

@media screen and (max-width: 480px) {
  p.purchase-item__price {
    font-size: 22px;
  }
}


.purchase-item__price--old {
  color: var(--c-black30);
  text-decoration: line-through;
}

.calc-table {
  width: 100%;
  margin: 20px 0;
  font-weight: 500;
}

.calc-table td {
  padding: 5px 0;
}

.calc-table__value {
  text-align: right;
}

.purchase__form {
  position: relative;
  display: flex;
  align-items: center;
}

.purchase__form input.purchase__input {
  width: 100%;
}

.btn.purchase__button {
  position: absolute;
  right: 0px;
  padding: 10px;
}

/*biling info section*/
.billing__info {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

@media screen and (max-width: 1025px) {
  .billing__info {
    display: block;
  }
}

.billing__info  p {
  width: 100%;
}

.billing__item:not(:last-of-type) {
  margin-bottom: 30px;
}

.billing__item p {
  font-size: 14px;
  color: var(--c-black20);
  margin-bottom: 18px;
}

/*forms*/
.billing__form {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  max-width: 100%;
  margin-top: 25px;
}

.form__item {
  display: block;
  margin-bottom: 24px;
  font-size: 12px;
  font-weight: 600;
}

.billing__info .form__item {
  width: 47%;
}

@media screen and (max-width: 1025px) {
  .billing__info .form__item  {
    width: 320px;
  }
}

.billing__info .form__item input {
  width: 100%;
}

.form__item--contrast {
  padding: 12px 15px;
  background-color: var(--c-black70);
  border: 1px solid var(--c-black30);
  border-radius: 12px;
}

.billing__method .form__item,
.billing__payment .form__item {
  width: 100%;
}
.form__item img {
  height: 14px;
  max-width: 60px;
  flex: 1;
  object-fit: contain;
}

.billing__method .form__item  label,
.billing__payment .form__item  label  {
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  text-align: center;
}

span.billing__price {
  margin-left: 60px;
  color: var(--c-secondary);
}

@media screen and (max-width: 800px) {
  span.billing__price   {
    margin-left: 50px;
  }
}

@media screen and (max-width: 768px) {
  span.billing__price   {
    margin-left: 70px;
  }
}

@media screen and (max-width: 480px) {
  span.billing__price   {
    margin-left: 30px;
  }
}


.billing__item textarea {
  width: 100%;
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  color: var(--c-black20);
}

